[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "atsphinx-feed"
authors = [{name = "Kazuya Takei", email = "myself@attakei.net"}]
license = {file = "LICENSE"}
classifiers = [
  "Development Status :: 4 - Beta",
  "Framework :: Sphinx",
  "Framework :: Sphinx :: Extension",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Documentation :: Sphinx",
]
readme = "README.rst"
dependencies = [
  "atsphinx-og-article>=0.2",
  "feedgen",
  "sphinx",
]
dynamic = ["version", "description"]
requires-python = ">= 3.9"

[project.optional-dependencies]
doc = [
  "rst-pypi-ref",
]
test = [
  "beautifulsoup4==4.*",
  "lxml==4.*",
  "pytest ==7.*",
]

[project.urls]
Home = "https://github.com/atsphinx/feed"

[tool.flit.module]
name = "atsphinx.feed"

[tool.flit.sdist]
exclude = [".github", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
